# data-scientist-agent

./: genezio.yaml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
server/: index.py  pyproject.toml
server/agent/: pyproject.toml
server/agent/data_scientist_agent/: index.py
server/genezio_python_executor/: genezio.yaml  index.py
